css/style.css
:root {
  --color-primary: #2584ff;
  --color-secondary: #00d9ff;
  --color-accent: #ff3400;
  --color-heading: #000000;
  --color-body: #383839;
  --color-body-darker: #5c5577;
  --color-callout-primary: #023202;
  --color-border: white;
  --border-radius: 30px;
}

/* typography*/

html {
  font-size: 62.5%; /* by default is 16px but now 62.5% of 16 is 10, so default is 10px now */
  scroll-behavior: smooth;
}
body {
  font-family:
    "Times New Roman",
    Times,
    serif,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
  font-size: 2.4rem;
  line-height: 1.5;
  color: var(--color-body);
  background: white;
}

body {
  font-size: 2rem;
}
h1 {
  font-size: 5rem;
  font-weight: 100;
}
h2 {
  font-size: 4rem;
}
h3 {
  font-size: 2.4rem;
}
a {
  text-decoration: none;
}
/*autorotate*/

.autoRotate {
  animation: autoRotateAnimation;
  animation-timeline: view();
}
@keyframes autoRotateAnimation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
/*autoshow*/
.autoShow {
  animation: autoShowAnimation both;
  animation-timeline: view(88% 5%);
}
@keyframes autoShowAnimation {
  from {
    opacity: 0;
    transform: translateY(200px) scale(0.3);
  }
  to {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

/*navigation bar*/

.nav {
  display: flex;
  white-space: nowrap;
  overflow: hidden;
  justify-content: space-between;
  align-items: flex-start;
}

.nav h1 {
  font-size: 3rem;
  letter-spacing: 1rem;
  margin-left: 20%;
  margin-top: 12%;

  font-style: bold;
  color: #000000;
}
.nav h4 {
  font-size: 2rem;
  letter-spacing: 1rem;
  margin-left: 20%;

  font-weight: 300;
  font-style: bold;
  color: #000000;
}
.nav ul {
  list-style-type: none;

  margin-right: 6.5%;
  display: flex;
}
.nav li {
  padding-left: 5rem;
  margin-top: 0;
}
/* bespoke boutique page navigation bar-dropdown*/
.navigation {
  display: flex;
  justify-content: space-between;
  padding-right: 13%;
}
.navigation h1 {
  font-size: 3rem;
  letter-spacing: 1rem;
  margin-left: 20%;
  margin-top: 12%;

  text-wrap: nowrap;

  color: #000000;
}
ul {
  list-style: none;
}
ul li {
  display: inline-block;
  position: relative;
}

ul li a {
  display: block;
  text-decoration: none;
  padding: 0.3rem 3rem;
  text-align: center;
  font-size: 2rem;
  letter-spacing: 1rem;
  color: black;
  margin-left: 20%;
  margin-top: 21%;
}
ul li ul.dropdown li {
  display: block;
}
ul li ul.dropdown {
  width: 100%;
  position: absolute;
  z-index: 999;
  background: #cad5ea;
  display: none;
}
ul li a:hover {
  color: #5c5577;
}
ul li:hover ul.dropdown {
  display: block;
}
.dropdown a {
  text-align: left;
  font-size: 1.8rem;
  letter-spacing: 0.4rem;
  margin-top: 1%;
  text-wrap: nowrap;
}

.KD__mono {
  scale: 0.3;
}

.bb {
  opacity: 1;
  transition: 0.5s;
  align-self: flex-end;
  margin-right: 3%;
  margin-bottom: 1rem;
}
.bb img {
  width: 26rem;
  height: auto;
  display: block;
}
.bb:hover {
  opacity: 0.6;
  scale: 1.1;
}

/* links */
a {
  text-decoration: none;
}

.link-arrow {
  color: var(--color-accent);
  text-transform: uppercase;
  font-size: 1.5rem;
  font-weight: bold;
}
.link-arrow::after {
  content: "-->";
  margin-left: 5px;
  transition: margin 0.2s;
}
.link-arrow:hover::after {
  margin-left: 10px;
}
@media screen and (min-width: 1024px) {
  .link-arrow {
    color: var(--color-accent);
    font-size: 1.5rem;
    font-weight: bold;
  }
}

/* lables*/

.lable {
  border-radius: 20px;
  padding: 0.5rem 1.5rem;
  font-size: 1.6rem;
  white-space: nowrap;
}

.lable--primary {
  background: var(--color-accent);
  color: white;
}

.lable--secondary {
  background: var(--color-body);
  color: white;
}
@media screen and (min-width: 1024px) {
  .lable {
    font-size: 1.5rem;
  }
}

/* lists */

.list {
  list-style: none;
  padding-left: 0;
  font-size: 3rem;
  font-weight: 500;
}
.list--inline .list__item {
  display: inline-block;
  margin-right: 2rem;
}
.list--tick {
  list-style-image: url(../images/pen-nib-solid.svg);
  padding-left: 3rem;
  color: var(--color-heading);
}
.list--tick .list__item {
  padding-left: 0.5rem;
  margin-bottom: 1rem;
}
@media screen and (min-width: 1024px) {
  .list--tick .list__item {
    padding-left: 0rem;
  }
}
/* Icons */
.icon-container {
  background: white;
  width: 100px;
  height: 100px;
  border-radius: 100%;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}
.container-secondary {
  background: gray;
}
.icon {
  width: 10px;
  height: 10px;
  color: var(--color-heading);
}
.icon--primary {
  fill: var(--color-primary);
  width: 60px;
  height: 60px;
}
.icon--secondary {
  fill: var(--color-secondary);
  width: 60px;
  height: 60px;
}
.icon--white {
  fill: var(--color-border);
  width: 60px;
  height: 60px;
}
.icon--grey {
  fill: gray;
  width: 60px;
  height: 60px;
}
.icon--collapsible {
  fill: var(--color-accent);
  width: 60px;
  height: 60px;
}

/* buttons */
.btn {
  font-size: 1.8rem;
  font-weight: 600;
  padding: 2rem 3rem;
  border: 0;
  border-radius: 40px;
  cursor: pointer;
  outline: 0;
  white-space: no wrap;
}
.btn .icon {
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
  vertical-align: middle;
}
.btn--primary {
  background: var(--color-primary);
  color: white;
}
.btn--primary:hover {
  background: var(--color-secondary);
}
.btn--secondary {
  background: var(--color-secondary);
  color: white;
}
.btn--secondary:hover {
  background: var(--color-primary);
}
.btn--accent {
  background: var(--color-accent);
  color: white;
}
.btn--accent:hover {
  background: var(--color-primary);
}
.btn--stratched {
  padding-left: 6rem;
  padding-right: 6rem;
}

/* input */
.input {
  padding: 1.5rem 3.5rem;
  border: 1px solid #ccc;
  border-radius: var(--border-radius);
  outline: 0;
  color: var(--color-heading);
  font-size: 2rem;
}
::placeholder {
  color: #cdcbd7;
}
/* ... */

